z-index fixed

--- a/src/ScrollButton.css
+++ b/src/ScrollButton.css
@@ -6,11 +6,11 @@
   left: 90%;
   justify-content: center;
   cursor: pointer;
-  z-index: 100;
 }
 
 .scrollButtonH {
   opacity: 0.5;
+  z-index: 1000;
 }
 
 .scrollButtonH:hover {
